[package]
name = "ergo-monitoring"
version = "0.1.0"
authors = ["Sabaun Taraki <taraki.sabaun.rl@gmail.com>"]
edition = "2018"

[lib]
name = "ergo_monitoring"
path = "src/lib.rs"

[[bin]]
name = "ergo_monitoring"
path = "src/bin/bin.rs"

[dependencies]
thiserror = "1.0"
openssl = "0.10.30"
reqwest = { version = "0.10", features = ["blocking", "json"] }
serde_json = "1.0.56"
config = "0.9.0"
