[package]
name = "ergo-monitoring"
version = "0.1.2"
authors = ["Sabaun Taraki <taraki.sabaun.rl@gmail.com>"]
edition = "2018"

[[bin]]
name = "ergo-monitoring"
path = "src/main.rs"

[dependencies]
futures = "0.3"
tokio = { version = "0.2", features = ["macros"] }
openssl = { version = "0.10", features = ["vendored"] }
reqwest = { version = "0.10", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
config = "0.9.0"
